[tool.poetry]
name = "arkia11napi"
version = "1.2.0"
description = "FastAPI for PVARKI user management, authentication and authorization"
authors = ["Eero af Heurlin <eero.afheurlin@iki.fi>"]
homepage = "https://github.com/PVARKI-projekti/python-shop-arkia11napi"
repository = "https://github.com/PVARKI-projekti/python-shop-arkia11napi"
license = "MIT"
readme = "README.rst"

[tool.poetry.scripts]
arkia11napi = "arkia11napi.console:arkia11napi_cli"


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[[tool.mypy.overrides]]
module="arkia11napi.schemas.*"  # pydantic_collections has issues
disallow_subclassing_any=false

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=arkia11napi --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"  # fastapi-mail depends on 3.8.1 as min
libadvian = "^1.0"
click = "^8.0"
#fastapi = ">=0.89,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
fastapi = "^0.88" # 0.89 has a nasty bug
python-dotenv = ">=0.21,<1.0" # explicitly specify this so pydantic.settings can use it
uvicorn = {version = "^0.20", extras = ["standard"]}
gunicorn = "^20.1"
jinja2 = "^3.1"
pyjwt = {version = "^2.6", extras = ["crypto"]}
fastapi-mail = "^1.2"
# FIXME: get from our own nexus or similar
arkia11nmodels = { git="https://github.com/pvarki/python-pvas-arkia11nmodels.git", tag="1.0.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
coverage = "^6.3"
pytest-cov = "^3.0"
pylint = "^2.13"
black = "^22.3"
bandit = "^1.7"
mypy = "^0.942"
pre-commit = "^2.17"
pytest-asyncio = "^0.18"
pytest-docker = "^1.0"
docker-compose = "^1.29"
bump2version = "^1.0"
detect-secrets = "^1.2"
httpx = "^0.23"
async-asgi-testclient = "^1.4"
psycopg2 = { version="^2.9", optional=false }

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
